fix extra space on right in mobile

--- a/ernest.css
+++ b/ernest.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 .topdivider {
@@ -218,6 +219,9 @@ footer p {
         margin: 0;
         border-radius: 0;
     }
+    body {
+        background-color: white;
+    }
 }
 
 @media all and (max-width: 1023px) {
@@ -237,7 +241,6 @@ footer p {
     #navlogo {
         display: flex;
         padding-left: 16px;
-        min-width: 13rem;
         height: 3.5rem;
     }
     #navlogo img {
@@ -349,5 +352,15 @@ footer p {
     }
     .navlist a {
         text-align: center;
+    }
+
+    footer {
+        flex-direction: column;
+    }
+}
+
+@media all and (max-width: 249px) {
+    #navlogo p {
+        display: none;
     }
 }
